# fireyourconsultant

./: .env.example  .gitignore  README.md  analyze_layout.py  analyze_pptx.py  compare_pptx_visual.py  pyproject.toml  test_generation.py
src/fyc/: config.py  main.py  models.py
src/fyc/api/: routes.py
src/fyc/brand/: analyzer.py
src/fyc/content/: generator.py
src/fyc/pptx_gen/: generator.py
src/fyc/scraper/: website_scraper.py
src/fyc/template/: __init__.py  extractor.py
src/fyc/utils/: file_extractor.py
static/: index.html
tests/: test_image_upload.py  test_progress.py
